tests/fixtures/invalid/divmod_set_none.py
# Cannot call divmod() with Set[int], None
x = divmod({1, 2, 3}, None)
